[package]
name = "demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
niobe-core = {path = "../niobe-core" }
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.10"
#wgpu = { path = "/tmp/wgpu/wgpu" }
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
lyon = { version = "0.17.5" , features = ["extra"] }
futures = "0.3.17"
rand = "0.8.4"
palette = "0.6.0"
rgb = { version = "0.8.27" }
nalgebra-glm = { path = "../../../../data/Documents/contributions/nalgebra/nalgebra-glm", features = ["convert-bytemuck"]}
pipe-trait = "0.3.2"
wgpu_glyph = "0.14.1"
glyph_brush = "0.7.2"
lexical = "6.0.0"
