[package]
name = "niobe-core"
version = "0.0.0"
edition = "2018"
description = "Data visualization library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.10"
bytemuck = { version = "1.4", features = [ "derive" ] }
nalgebra-glm = "0.15.0"
palette = "0.6.0"
