[package]
name = "niobe-core"
version = "0.0.0"
edition = "2018"
description = "Data visualization library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.10"
bytemuck = { version = "1.4", features = [ "derive" ] }
#nalgebra-glm = { version = "0.15.0", features = ["convert-bytemuck"]}
nalgebra-glm = { path = "../../../../data/Documents/contributions/nalgebra/nalgebra-glm", features = ["convert-bytemuck"]}
rgb = { version = "0.8.27", features = ["bytemuck"] }
num-traits = "0.2.14"
derive_more = "0.99.16"
