[package]
name = "niobe"
version = "0.0.0"
edition = "2018"
description = "Data visualization library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
niobe-core = {path = "../niobe-core" }
nalgebra-glm = { path = "../../../../data/Documents/contributions/nalgebra/nalgebra-glm", features = ["convert-bytemuck"]}
rgb = { version = "0.8.27" }
wgpu_glyph = "0.14.1"
glyph_brush = "0.7.2"
getset = "0.1.1"
derive_builder = "0.10.2"
wgpu = "0.10"
futures = "0.3.17"
lexical = "6.0.0"
tap = "1.0.1"
stretch = "0.3.2"
epaint = { version = "0.14.0", features = ["default_fonts"] }
winit = "0.25"
