[package]
name = "ui_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.14.2", features = ["default_fonts"] }
egui_wgpu_backend = "0.12.0"
wgpu = "0.10"
winit = "0.25"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
anyhow = "1.0"
chrono = "0.4.19"
egui_winit_platform = "0.10.0"
epaint = { version = "0.14.0", features = ["default_fonts"] }
